--- a/app/src/main/res/layout/activity_add_spool.xml
+++ b/app/src/main/res/layout/activity_add_spool.xml
@@ -13,8 +13,9 @@
         android:layout_height="55dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:inputType="text"
+        android:inputType="textAutoComplete"
         android:text="@string/manufacturer_name"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
