--- a/app/src/main/res/layout/new_spool_entry.xml
+++ b/app/src/main/res/layout/new_spool_entry.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,7 +11,9 @@
         android:layout_height="43dp"
         android:layout_marginTop="16dp"
         android:text="Please enter the details for the new spool of filament below:"
+        app:layout_constraintBottom_toTopOf="@+id/spoolName"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,9 +24,11 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Spool Name"
+        app:layout_constraintBottom_toTopOf="@+id/spoolBrand"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="76dp"
+        app:layout_constraintTop_toBottomOf="@+id/newSpoolTitle"
         tools:text="Name" />
 
     <EditText
@@ -35,10 +38,11 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Spool Color"
+        app:layout_constraintBottom_toTopOf="@+id/spoolWeight"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="195dp"
+        app:layout_constraintTop_toBottomOf="@+id/spoolBrand"
         tools:text="Color" />
 
     <EditText
@@ -48,9 +52,11 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Brand"
+        app:layout_constraintBottom_toTopOf="@+id/spoolColor"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="136dp"
+        app:layout_constraintTop_toBottomOf="@+id/spoolName"
         tools:text="Brand" />
 
     <EditText
@@ -60,28 +66,47 @@
         android:ems="10"
         android:inputType="number"
         android:text="Weight"
+        app:layout_constraintBottom_toTopOf="@+id/spoolMaterialSpinner"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="256dp"
+        app:layout_constraintTop_toBottomOf="@+id/spoolColor"
         tools:text="Weight" />
 
     <Spinner
         android:id="@+id/spoolMaterialSpinner"
         android:layout_width="112dp"
         android:layout_height="41dp"
+        android:layout_marginEnd="84dp"
+        android:layout_marginBottom="8dp"
         android:entries="@array/materials_array"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.691"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="315dp" />
+        app:layout_constraintBottom_toTopOf="@+id/buttonAddSpool"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="80dp"
         android:layout_height="41dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Material:"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="315dp" />
+        app:layout_constraintBottom_toTopOf="@+id/buttonAddSpool"
+        app:layout_constraintEnd_toStartOf="@+id/spoolMaterialSpinner"
+        app:layout_constraintHorizontal_bias="0.836"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/buttonAddSpool"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="68dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
