Fixed some UI things

--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -8,5 +8,8 @@
         android:id="@+id/textViewName"
         style="@style/spool_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:scrollbars="none"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
 </LinearLayout>
