--- a/app/src/main/res/layout/new_spool_entry.xml
+++ b/app/src/main/res/layout/new_spool_entry.xml
@@ -8,10 +8,13 @@
 
     <TextView
         android:id="@+id/newSpoolTitle"
-        android:layout_width="253dp"
+        android:layout_width="wrap_content"
         android:layout_height="43dp"
         android:layout_marginTop="16dp"
+        android:gravity="center_horizontal"
         android:text="Please enter the details for the new spool of filament below:"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/spoolName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -97,7 +100,7 @@
 
     <Button
         android:id="@+id/buttonAddSpool"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
