--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,15 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/textViewName"
         style="@style/spool_title"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="329dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
         android:scrollbars="none"
         android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:textSize="14sp" />
+
+    <ImageButton
+        android:id="@+id/ib_remove"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:padding="0dp"
+        android:src="@drawable/ic_icon_delete" />
+
 </LinearLayout>
