--- a/app/src/main/res/layout/new_spool_entry.xml
+++ b/app/src/main/res/layout/new_spool_entry.xml
@@ -86,12 +86,13 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="80dp"
-        android:layout_height="41dp"
+        android:layout_width="79dp"
+        android:layout_height="33dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="Material:"
+        android:textAlignment="viewStart"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/buttonAddSpool"
         app:layout_constraintEnd_toStartOf="@+id/spoolMaterialSpinner"
