Fixed layout issues on new print job and change weight

--- a/app/src/main/res/layout/activity_print_job.xml
+++ b/app/src/main/res/layout/activity_print_job.xml
@@ -6,6 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".PrintJobActivity">
 
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="168dp"
+        android:layout_marginEnd="48dp"
+        android:text="g"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/weightCostp"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/spoolIDp"
         android:layout_width="wrap_content"
@@ -23,7 +39,7 @@
         android:id="@+id/weightCostp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Estimated weight loss"
         android:inputType="textPersonName"
@@ -46,9 +62,11 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="337dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
         android:text="Please enter the spool ID for the spool of filament used and the weight of the 3D print from your slicer:"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
